# hi-score-hub

./: .gitignore  Makefile  Milestone1.md  README.md  docker-compose.yml  pom.xml
.github/workflows/: ci.yml
infra/terraform/: README.md  main.tf  variables.tf
infra/terraform/scripts/: cloud-init.sh
proto/: score_update.proto
scripts/: kafka-kraft-entrypoint.sh
services/batch-job/: pom.xml
services/batch-job/src/main/java/com/example/leaderboard/batch/: NightlyRebuildJob.java
services/gateway/: CMakeLists.txt
services/gateway/src/: main.cpp
services/rank-aggregator/src/main/java/com/example/leaderboard/proto/: ScoreUpdate.java  ScoreUpdateOrBuilder.java  ScoreUpdateOuterClass.java
services/ranking-service/: CMakeLists.txt
services/ranking-service/src/: main.cpp
zkconf/: SERVER_LIST
